--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@ionic-native/ble": "^4.7.0",
+    "@ionic-native/bluetooth-serial": "^4.7.0",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/local-notifications": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-background-mode": "^0.7.2",
+    "cordova-plugin-ble-central": "^1.1.9",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
@@ -32,8 +39,17 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@ionic-native/background-mode": "^4.7.0",
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-ble-central": {},
+      "cordova-plugin-bluetooth-serial": {},
+      "cordova-plugin-local-notification": {}
+    }
+  }
 }
