--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/ble": "^4.7.0",
     "@ionic-native/bluetooth-serial": "^4.7.0",
+    "@ionic-native/call-number": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/local-notifications": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "call-number": "^1.0.1",
     "cordova-android": "^7.0.0",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-badge": "^0.8.7",
@@ -62,7 +64,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android"
